--- a/about.html
+++ b/about.html
@@ -409,27 +409,27 @@
       <h2 data-key="teamTitle">Our Team</h2>
       <div class="team-members">
         <div class="team-member">
-          <img src="/Seika-education/srishti.jpg" alt="Poudel Srishti, CEO" />
+          <img src="/Seika-education/images/srishti.jpg" alt="Poudel Srishti, CEO" />
           <div class="name" data-key="teamSrishti">Poudel Srishti</div>
           <div class="role" data-key="teamSrishtiRole">CEO/MD</div>
         </div>
         <div class="team-member">
-          <img src="/Seika-education/sanjeeb.jpg" alt="Chaulagain Sanjeeb, Co-CHAIRMAN" />
+          <img src="/Seika-education/images/sanjeeb.jpg" alt="Chaulagain Sanjeeb, Co-CHAIRMAN" />
           <div class="name" data-key="teamSanjeeb">Chaulagain Sanjeeb</div>
           <div class="role" data-key="teamSanjeebRole">Co-CHAIRMAN/Japan Representative</div>
         </div>
         <div class="team-member">
-          <img src="/Seika-education/subhas.jpg" alt="Poudel Subhas, Co-CHAIRMAN" />
+          <img src="/Seika-education/images/subhas.jpg" alt="Poudel Subhas, Co-CHAIRMAN" />
           <div class="name" data-key="teamSubhas">Poudel Subhas</div>
           <div class="role" data-key="teamSubhasRole">Co-CHAIRMAN/Japan Representative</div>
         </div>
         <div class="team-member">
-          <img src="/Seika-education/suman.jpg" alt="Paudel Suman, Manager" />
+          <img src="/Seika-education/images/suman.jpg" alt="Paudel Suman, Manager" />
           <div class="name" data-key="teamSuman">Paudel Suman</div>
           <div class="role" data-key="teamSumanRole">Manager/Language Teacher</div>
         </div>
         <div class="team-member">
-          <img src="/Seika-education/yubraj.jpg" alt="Ghimire YubRaj, Teacher" />
+          <img src="/Seika-education/images/yubraj.jpg" alt="Ghimire YubRaj, Teacher" />
           <div class="name" data-key="teamYubRaj">Ghimire YubRaj</div>
           <div class="role" data-key="teamYubRajRole">Language Teacher</div>
         </div>
@@ -456,7 +456,7 @@
           </p>
         </div>
         <div class="owner-image-column">
-          <img src="/Seika-education/srishti.jpg" alt="Srishti Poudel, MD/CEO of Seika Education Consultancy" />
+          <img src="/Seika-education/images/srishti.jpg" alt="Srishti Poudel, MD/CEO of Seika Education Consultancy" />
           <div class="owner-name-below-photo" data-key="ownerName">SRISHTI POUDEL</div>
         </div>
       </div>
@@ -486,7 +486,7 @@
   <footer>
     <p data-key="footerText">© 2025 Seika Education Consultancy. All rights reserved.</p>
     <div class="social-links">
-      <a href="https://www.facebook.com/isanabroad" target="_blank" aria-label="Visit Seika Education Consultancy on Facebook">Facebook</a> |
+      <a href="https://www.facebook.com/SeikaEducation" target="_blank" aria-label="Visit Seika Education Consultancy on Facebook">Facebook</a> |
       <a href="https://tiktok.com/seikaedu" target="_blank" aria-label="Visit Seika Education Consultancy on TikTok">TikTok</a> |
       <a href="https://instagram.com/seikaedu" target="_blank" aria-label="Visit Seika Education Consultancy on Instagram">Instagram</a>
     </div>
