--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="author" content="Seika Education Consultancy" />
   <title>Seika Education Consultancy</title>
 
-  <link rel="preload" as="image" href="/Seika-education/banner-2.webp">
-  <link rel="preload" as="image" href="/Seika-education/banner-5.webp">
-  <link rel="preload" as="image" href="/Seika-education/banner-1.webp">
+  <link rel="preload" as="image" href="/Seika-education/images/banner-2.webp">
+  <link rel="preload" as="image" href="/Seika-education/images/banner-5.webp">
+  <link rel="preload" as="image" href="/Seika-education/images/banner-1.webp">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
@@ -259,13 +259,13 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img src="/Seika-education/banner-2.png" alt="Seika Education Consultancy Reception Area" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
+          <img src="/Seika-education/images/banner-2.png" alt="Seika Education Consultancy Reception Area" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
         </div>
         <div class="swiper-slide">
-          <img src="/Seika-education/banner-5.webp" alt="Study & Work in Japan Banner" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
+          <img src="/Seika-education/images/banner-5.webp" alt="Study & Work in Japan Banner" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
         </div>
         <div class="swiper-slide">
-          <img src="/Seika-education/banner-1.webp" alt="Seika Education Consultancy Classroom" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
+          <img src="/Seika-education/images/banner-1.webp" alt="Seika Education Consultancy Classroom" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
         </div>
       </div>
       <div class="swiper-pagination"></div>
@@ -331,7 +331,7 @@
   <footer>
     <p>© 2025 Seika Education Consultancy. All rights reserved.</p>
     <div class="social-links">
-      <a href="https://www.facebook.com/isanabroad" target="_blank" rel="noopener noreferrer">Facebook</a> |
+      <a href="https://www.facebook.com/SeikaEducation" target="_blank" rel="noopener noreferrer">Facebook</a> |
       <a href="https://tiktok.com/seikaedu" target="_blank" rel="noopener noreferrer">TikTok</a> |
       <a href="https://instagram.com/seikaedu" target="_blank" rel="noopener noreferrer">Instagram</a>
     </div>
