--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         contactMessagePlaceholder: "Your Message"
       },
       jp: {
-        introTitle: "清華教育コンサルタンシーへようこそ",
+        introTitle: "成果教育コンサルタンシーへようこそ",
         introSubtitle: "日本での留学と仕事の信頼できるパートナー",
         ctaButton: "始める",
         ourServicesTitle: "サービス内容",
