--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="author" content="Seika Education Consultancy" />
   <title>Seika Education Consultancy</title>
 
-  <link rel="preload" as="image" href="/Seika-education/images/banner-2.webp">
-  <link rel="preload" as="image" href="/Seika-education/images/banner-5.webp">
-  <link rel="preload" as="image" href="/Seika-education/images/banner-1.webp">
+  <link rel="preload" as="image" href="images/banner-2.webp">
+  <link rel="preload" as="image" href="images/banner-5.webp">
+  <link rel="preload" as="image" href="images/banner-1.webp">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
@@ -259,13 +259,13 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img src="/Seika-education/images/banner-2.png" alt="Seika Education Consultancy Reception Area" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
+          <img src="images/banner-2.png" alt="Seika Education Consultancy Reception Area" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
         </div>
         <div class="swiper-slide">
-          <img src="/Seika-education/images/banner-5.webp" alt="Study & Work in Japan Banner" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
+          <img src="images/banner-5.webp" alt="Study & Work in Japan Banner" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
         </div>
         <div class="swiper-slide">
-          <img src="/Seika-education/images/banner-1.webp" alt="Seika Education Consultancy Classroom" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
+          <img src="images/banner-1.webp" alt="Seika Education Consultancy Classroom" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
         </div>
       </div>
       <div class="swiper-pagination"></div>
