--- a/header.html
+++ b/header.html
@@ -140,7 +140,7 @@
 <body>
   <header>
   <div class="logo">
-    <img src="./images/Logo-Seika.png" alt="Seika Education Consultancy Logo" />
+    <img src="/Seika-education/images/Logo-Seika.png" alt="Seika Education Consultancy Logo" />
   </div>
 
     <nav>
