--- a/index.html
+++ b/index.html
@@ -254,6 +254,8 @@
 
 <body>
   <div id="header-placeholder"></div>
+  <script>
+fetch('/Seika-education/header.html')</script)
 
   <section class="hero" id="home">
     <div class="swiper mySwiper">
