--- a/about.html
+++ b/about.html
@@ -494,7 +494,7 @@
 
   <script>
     // ヘッダーを動的に読み込む
-    fetch('/Seika-education/header.html') // header.htmlの正しいパスを指定
+    fetch('/header.html') // header.htmlの正しいパスを指定
       .then(response => {
         if (!response.ok) {
           throw new Error(`HTTP error! status: ${response.status}`);
