--- a/contact.html
+++ b/contact.html
@@ -323,7 +323,7 @@
             console.log("DOM Content Loaded. Initializing contact page...");
 
             // ヘッダーのロード
-            loadHTML('header-placeholder', '/Seika-education/header.html');
+            loadHTML('header-placeholder', '/header.html');
 
             // フッターのロード
             loadHTML('footer-placeholder', '/Seika-education/footer.html');
