--- a/about.html
+++ b/about.html
@@ -409,27 +409,27 @@
       <h2 data-key="teamTitle">Our Team</h2>
       <div class="team-members">
         <div class="team-member">
-          <img src="/Seika-education/images/srishti.jpg" alt="Poudel Srishti, CEO" />
+          <img src="./images/srishti.jpg" alt="Poudel Srishti, CEO" />
           <div class="name" data-key="teamSrishti">Poudel Srishti</div>
           <div class="role" data-key="teamSrishtiRole">CEO/MD</div>
         </div>
         <div class="team-member">
-          <img src="/Seika-education/images/sanjeeb.jpg" alt="Chaulagain Sanjeeb, Co-CHAIRMAN" />
+          <img src="./images/sanjeeb.jpg" alt="Chaulagain Sanjeeb, Co-CHAIRMAN" />
           <div class="name" data-key="teamSanjeeb">Chaulagain Sanjeeb</div>
           <div class="role" data-key="teamSanjeebRole">Co-CHAIRMAN/Japan Representative</div>
         </div>
         <div class="team-member">
-          <img src="/Seika-education/images/subhas.jpg" alt="Poudel Subhas, Co-CHAIRMAN" />
+          <img src="./images/subhas.jpg" alt="Poudel Subhas, Co-CHAIRMAN" />
           <div class="name" data-key="teamSubhas">Poudel Subhas</div>
           <div class="role" data-key="teamSubhasRole">Co-CHAIRMAN/Japan Representative</div>
         </div>
         <div class="team-member">
-          <img src="/Seika-education/images/suman.jpg" alt="Paudel Suman, Manager" />
+          <img src="./images/suman.jpg" alt="Paudel Suman, Manager" />
           <div class="name" data-key="teamSuman">Paudel Suman</div>
           <div class="role" data-key="teamSumanRole">Manager/Language Teacher</div>
         </div>
         <div class="team-member">
-          <img src="/Seika-education/images/yubraj.jpg" alt="Ghimire YubRaj, Teacher" />
+          <img src="./images/yubraj.jpg" alt="Ghimire YubRaj, Teacher" />
           <div class="name" data-key="teamYubRaj">Ghimire YubRaj</div>
           <div class="role" data-key="teamYubRajRole">Language Teacher</div>
         </div>
@@ -456,7 +456,7 @@
           </p>
         </div>
         <div class="owner-image-column">
-          <img src="/Seika-education/images/srishti.jpg" alt="Srishti Poudel, MD/CEO of Seika Education Consultancy" />
+          <img src="./images/srishti.jpg" alt="Srishti Poudel, MD/CEO of Seika Education Consultancy" />
           <div class="owner-name-below-photo" data-key="ownerName">SRISHTI POUDEL</div>
         </div>
       </div>
@@ -464,18 +464,18 @@
 
     <div class="contact-info">
       <div class="contact-item">
-        <img src="/Seika-education/images/mail-icon.png" alt="Email icon" />
+        <img src="./images/mail-icon.png" alt="Email icon" />
         <div class="title" data-key="mailTitle">Feel free to write to us</div>
         <a href="mailto:info@seikaeducation.com" aria-label="Email Seika Education Consultancy">info@seikaeducation.com</a>
       </div>
       <div class="contact-item">
-        <img src="/Seika-education/images/phone-icon.png" alt="Phone icon" />
+        <img src="./images/phone-icon.png" alt="Phone icon" />
         <div class="title" data-key="callTitle">Call us</div>
         <p><a href="tel:+977017850000" aria-label="Call Seika Education Consultancy at 01-5918911">071-0123456</a></p>
         <p><a href="tel:+9779857000000" aria-label="Call Seika Education Consultancy at 9851183897">9857025154</a></p>
       </div>
       <div class="contact-item">
-        <img src="/Seika-education/images/location-icon.png" alt="Location icon" />
+        <img src="./images/location-icon.png" alt="Location icon" />
         <div class="title" data-key="locationTitle">Our location</div>
         <p data-key="locationAddress1">Near Dream International Hotel</p>
         <p data-key="locationAddress2">Butwal-09, Milan Chowk, Rupandehi</p>
