--- a/contact.html
+++ b/contact.html
@@ -326,7 +326,7 @@
             loadHTML('header-placeholder', '/header.html');
 
             // フッターのロード
-            loadHTML('footer-placeholder', '/Seika-education/footer.html');
+            loadHTML('footer-placeholder', '/footer.html');
 
             // ヘッダーからの言語変更イベントをリッスンしてメインコンテンツを更新
             document.addEventListener('languageChanged', (event) => {
