--- a/header.html
+++ b/header.html
@@ -143,14 +143,14 @@
     <img src="./images/Logo-Seika.png" alt="Seika Education Consultancy Logo" />
   </div>
 
-    <nav>
-      <ul id="nav-menu">
-        <li><a href="./index.html" data-key="navHome">Home</a></li>
-        <li><a href="./index.html#services" data-key="navServices">Services</a></li>
-        <li><a href="./about.html" data-key="navAbout">About</a></li>
-        <li><a href="./contact.html" data-key="navContact">Contact</a></li>
-      </ul>
-    </nav>
+<nav>
+  <ul id="nav-menu">
+    <li><a href="/" data-key="navHome">Home</a></li>
+    <li><a href="/#services" data-key="navServices">Services</a></li>
+    <li><a href="/about/" data-key="navAbout">About</a></li>
+    <li><a href="/contact/" data-key="navContact">Contact</a></li>
+  </ul>
+</nav>
 
     <div class="language-switch" aria-live="polite">
       <button id="enBtn" type="button">English</button>
