--- a/header.html
+++ b/header.html
@@ -147,8 +147,8 @@
   <ul id="nav-menu">
     <li><a href="/" data-key="navHome">Home</a></li>
     <li><a href="/#services" data-key="navServices">Services</a></li>
-    <li><a href="/about/" data-key="navAbout">About</a></li>
-    <li><a href="/contact/" data-key="navContact">Contact</a></li>
+    <li><a href="/about.html" data-key="navAbout">About</a></li>
+    <li><a href="/contact.html" data-key="navContact">Contact</a></li>
   </ul>
 </nav>
 
