--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
         <div class="contact-info flex flex-wrap justify-center gap-5 mb-10">
             <div class="contact-item flex-1 min-w-[280px] max-w-sm bg-white p-6 rounded-xl shadow-md flex items-center gap-4 transition-transform transform hover:scale-105 hover:shadow-lg">
                 <span class="material-icons text-4xl text-[#2A6BBF]">place</span>
-                <p class="text-base leading-relaxed" data-key="contactAddress"><strong>Address:</strong><br> Butwal-9, Milan Chowk, Nepal</p>
+                <p class="text-base leading-relaxed" data-key="contactAddress"><strong>Address:</strong><br> Butwal-9, Milan Chowk(Ganesh-Path), Nepal</p>
             </div>
 
             <div class="contact-item flex-1 min-w-[280px] max-w-sm bg-white p-6 rounded-xl shadow-md flex items-center gap-4 transition-transform transform hover:scale-105 hover:shadow-lg">
