--- a/contact.html
+++ b/contact.html
@@ -215,7 +215,14 @@
         </form>
     </main>
 
-    <div id="footer-placeholder"></div>
+     <footer>
+    <p data-key="footerText">© 2025 Seika Education Consultancy. All rights reserved.</p>
+    <div class="social-links">
+      <a href="https://www.facebook.com/SeikaEducation" target="_blank" aria-label="Visit Seika Education Consultancy on Facebook">Facebook</a> |
+      <a href="https://tiktok.com/seikaedu" target="_blank" aria-label="Visit Seika Education Consultancy on TikTok">TikTok</a> |
+      <a href="https://instagram.com/seikaedu" target="_blank" aria-label="Visit Seika Education Consultancy on Instagram">Instagram</a>
+    </div>
+  </footer>
 
     <script>
         // メインコンテンツの翻訳データ (contact.html用)
