--- a/contact.html
+++ b/contact.html
@@ -150,6 +150,23 @@
         form button:active {
             transform: translateY(0); /* クリック時にボタンを押す */
         }
+            footer {
+      background: #222;
+      color: #ccc;
+      padding: 15px 30px;
+      text-align: center;
+      font-size: 0.9rem;
+    }
+
+    .social-links a {
+      color: #ccc;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+
+    .social-links a:hover {
+      color: white;
+    }
 
         /* メディアクエリ */
         @media (max-width: 600px) {
