--- a/about.html
+++ b/about.html
@@ -471,8 +471,8 @@
       <div class="contact-item">
         <img src="./images/phone-icon.png" alt="Phone icon" />
         <div class="title" data-key="callTitle">Call us</div>
-        <p><a href="tel:+977017850000" aria-label="Call Seika Education Consultancy at 01-5918911">071-0123456</a></p>
-        <p><a href="tel:+9779857000000" aria-label="Call Seika Education Consultancy at 9851183897">9857025154</a></p>
+        <p><a href="tel:+977-9847498896" aria-label="Call Seika Education Consultancy at 9847498896">+977-9847498896</a></p>
+        <p><a href="tel:+977-071590897" aria-label="Call Seika Education Consultancy at 071590897">+977-071590897</a></p>
       </div>
       <div class="contact-item">
         <img src="./images/location-icon.png" alt="Location icon" />
@@ -542,7 +542,7 @@
         callTitle: "Call us",
         locationTitle: "Our location",
         locationAddress1: "Near Dream International Hotel",
-        locationAddress2: "Butwal-09, Milan Chowk, Rupandehi",
+        locationAddress2: "Butwal-09, Milan Chowk(Ganesh Path), Rupandehi",
         footerText: "© 2025 Seika Education Consultancy. All rights reserved."
       },
       jp: {
