--- a/about.html
+++ b/about.html
@@ -471,14 +471,14 @@
       <div class="contact-item">
         <img src="./images/phone-icon.png" alt="Phone icon" />
         <div class="title" data-key="callTitle">Call us</div>
-        <p><a href="tel:+977-9847498896" aria-label="Call Seika Education Consultancy at 9847498896">+977-9847498896</a></p>
-        <p><a href="tel:+977-071590897" aria-label="Call Seika Education Consultancy at 071590897">+977-071590897</a></p>
+        <p><a href="tel:9847498896" aria-label="Call Seika Education Consultancy at 9847498896">9847498896</a></p>
+        <p><a href="tel:071590897" aria-label="Call Seika Education Consultancy at 071590897">071590897</a></p>
       </div>
       <div class="contact-item">
         <img src="./images/location-icon.png" alt="Location icon" />
         <div class="title" data-key="locationTitle">Our location</div>
         <p data-key="locationAddress1">Near Dream International Hotel</p>
-        <p data-key="locationAddress2">Butwal-09, Milan Chowk, Rupandehi</p>
+        <p data-key="locationAddress2">Butwal-09, Milan Chowk(Ganesh Path), Rupandehi</p>
       </div>
     </div>
   </div>
