--- a/contact.html
+++ b/contact.html
@@ -247,8 +247,8 @@
             en: {
                 pageTitleContact: "Contact | Seika Education Consultancy",
                 contactHeading: "Contact Us",
-                contactAddress: "<strong>Address:</strong><br> Butwal-9, Milan Chowk, Nepal",
-                contactPhone: "<strong>Phone:</strong><br> +977-9876543210",
+                contactAddress: "<strong>Address:</strong><br> Butwal-9, Milan Chowk(Ganesh Path)",
+                contactPhone: "<strong>Phone:</strong><br> +977-9847498896",
                 contactEmail: "<strong>Email:</strong><br> info@seikaeducation.com",
                 formNameLabel: "Your Name",
                 formNamePlaceholder: "Enter your name",
