--- a/about.html
+++ b/about.html
@@ -478,7 +478,7 @@
         <img src="./images/location-icon.png" alt="Location icon" />
         <div class="title" data-key="locationTitle">Our location</div>
         <p data-key="locationAddress1">Near Dream International Hotel</p>
-        <p data-key="locationAddress2">Butwal-09, Milan Chowk(Ganesh Path), Rupandehi</p>
+        <p data-key="locationAddress2">Butwal-09, Milan Chowk(Ganesh Path)</p>
       </div>
     </div>
   </div>
