--- a/about.html
+++ b/about.html
@@ -542,7 +542,7 @@
         callTitle: "Call us",
         locationTitle: "Our location",
         locationAddress1: "Near Dream International Hotel",
-        locationAddress2: "Butwal-09, Milan Chowk(Ganesh Path), Rupandehi",
+        locationAddress2: "Butwal-09, Milan Chowk(Ganesh Path)",
         footerText: "© 2025 Seika Education Consultancy. All rights reserved."
       },
       jp: {
@@ -575,7 +575,7 @@
         callTitle: "お電話ください",
         locationTitle: "私たちの所在地",
         locationAddress1: "ドリームインターナショナルホテル近く",
-        locationAddress2: "ブトワル-09、ミランチョーク、ルパンデヒ",
+        locationAddress2: "Butwal-09, Milan Chowk(Ganesh Path)",
         footerText: "© 2025 清華教育コンサルタンシー. 無断転載を禁じます。"
       }
     };
