--- a/about.html
+++ b/about.html
@@ -529,7 +529,7 @@
         teamSubhas: "Poudel Subhas",
         teamSubhasRole: "Co-CHAIRMAN/Japan Representative",
         teamSuman: "Paudel Suman",
-        teamSumanRole: "Manager/Japan Representative/Language Teacher",
+        teamSumanRole: "Manager/Language Teacher",
         teamYubRaj: "Ghimire YubRaj",
         teamYubRajRole: "Language Teacher",
         mdCeoMessageTitle: "Message From The MD/CEO Of<br><span class=\"underline\">Seika Education Consultancy</span>",
