--- a/contact.html
+++ b/contact.html
@@ -207,29 +207,29 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.6789!2d83.447447!3d27.697475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjfCsDQxJzUxLjAiTiA4M8KwMjYnNTUuMCJF!5e0!3m2!1sen!2snp!4v1678901234567!5m2!1sen!2snp" class="w-full h-[350px] sm:h-[400px] border-0 rounded-xl shadow-md" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <form class="bg-white p-6 sm:p-8 rounded-xl shadow-md">
-            <div class="form-group mb-5">
-                <label for="name" class="block mb-2 font-bold text-gray-700" data-key="formNameLabel">Your Name</label>
-                <input type="text" id="name" data-key-placeholder="formNamePlaceholder" placeholder="Enter your name" required class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-[#2A6BBF] focus:ring-2 focus:ring-[#2A6BBF]/20 transition-all duration-200">
-            </div>
+<form action="https://formsubmit.co/info@seikaeducation.com" method="POST" class="bg-white p-6 sm:p-8 rounded-xl shadow-md">
+    <div class="form-group mb-5">
+        <label for="name" class="block mb-2 font-bold text-gray-700" data-key="formNameLabel">Your Name</label>
+        <input type="text" id="name" name="name" data-key-placeholder="formNamePlaceholder" placeholder="Enter your name" required class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-[#2A6BBF] focus:ring-2 focus:ring-[#2A6BBF]/20 transition-all duration-200">
+    </div>
 
-            <div class="form-group mb-5">
-                <label for="email" class="block mb-2 font-bold text-gray-700" data-key="formEmailLabel">Your Email</label>
-                <input type="email" id="email" data-key-placeholder="formEmailPlaceholder" placeholder="Enter your email" required class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-[#2A6BBF] focus:ring-2 focus:ring-[#2A6BBF]/20 transition-all duration-200">
-            </div>
+    <div class="form-group mb-5">
+        <label for="email" class="block mb-2 font-bold text-gray-700" data-key="formEmailLabel">Your Email</label>
+        <input type="email" id="email" name="email" data-key-placeholder="formEmailPlaceholder" placeholder="Enter your email" required class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-[#2A6BBF] focus:ring-2 focus:ring-[#2A6BBF]/20 transition-all duration-200">
+    </div>
 
-            <div class="form-group mb-5">
-                <label for="subject" class="block mb-2 font-bold text-gray-700" data-key="formSubjectLabel">Subject</label>
-                <input type="text" id="subject" data-key-placeholder="formSubjectPlaceholder" placeholder="Enter subject" required class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-[#2A6BBF] focus:ring-2 focus:ring-[#2A6BBF]/20 transition-all duration-200">
-            </div>
+    <div class="form-group mb-5">
+        <label for="subject" class="block mb-2 font-bold text-gray-700" data-key="formSubjectLabel">Subject</label>
+        <input type="text" id="subject" name="subject" data-key-placeholder="formSubjectPlaceholder" placeholder="Enter subject" required class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-[#2A6BBF] focus:ring-2 focus:ring-[#2A6BBF]/20 transition-all duration-200">
+    </div>
 
-            <div class="form-group mb-6">
-                <label for="message" class="block mb-2 font-bold text-gray-700" data-key="formMessageLabel">Message</label>
-                <textarea id="message" data-key-placeholder="formMessagePlaceholder" placeholder="Write your message here..." required class="w-full p-3 border border-gray-300 rounded-lg resize-y min-h-[140px] focus:outline-none focus:border-[#2A6BBF] focus:ring-2 focus:ring-[#2A6BBF]/20 transition-all duration-200"></textarea>
-            </div>
+    <div class="form-group mb-6">
+        <label for="message" class="block mb-2 font-bold text-gray-700" data-key="formMessageLabel">Message</label>
+        <textarea id="message" name="message" data-key-placeholder="formMessagePlaceholder" placeholder="Write your message here..." required class="w-full p-3 border border-gray-300 rounded-lg resize-y min-h-[140px] focus:outline-none focus:border-[#2A6BBF] focus:ring-2 focus:ring-[#2A6BBF]/20 transition-all duration-200"></textarea>
+    </div>
 
-            <button type="submit" class="bg-[#2A6BBF] text-white py-3 px-6 rounded-lg text-base cursor-pointer hover:bg-[#1f56a1] transition-all duration-300 ease-in-out transform hover:-translate-y-1 active:translate-y-0 shadow-md hover:shadow-lg" data-key="formSubmitButton">Send Message</button>
-        </form>
+    <button type="submit" class="bg-[#2A6BBF] text-white py-3 px-6 rounded-lg text-base cursor-pointer hover:bg-[#1f56a1] transition-all duration-300 ease-in-out transform hover:-translate-y-1 active:translate-y-0 shadow-md hover:shadow-lg" data-key="formSubmitButton">Send Message</button>
+</form>
     </main>
 
      <footer>
