--- a/contact.html
+++ b/contact.html
@@ -207,7 +207,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.6789!2d83.447447!3d27.697475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjfCsDQxJzUxLjAiTiA4M8KwMjYnNTUuMCJF!5e0!3m2!1sen!2snp!4v1678901234567!5m2!1sen!2snp" class="w-full h-[350px] sm:h-[400px] border-0 rounded-xl shadow-md" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-<form action="https://formsubmit.co/info@seikaeducation.com" method="POST" class="bg-white p-6 sm:p-8 rounded-xl shadow-md">
+<form action="https://formsubmit.co/paudelsuman786@gmail.com" method="POST" class="bg-white p-6 sm:p-8 rounded-xl shadow-md">
     <div class="form-group mb-5">
         <label for="name" class="block mb-2 font-bold text-gray-700" data-key="formNameLabel">Your Name</label>
         <input type="text" id="name" name="name" data-key-placeholder="formNamePlaceholder" placeholder="Enter your name" required class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-[#2A6BBF] focus:ring-2 focus:ring-[#2A6BBF]/20 transition-all duration-200">
