--- a/contact.html
+++ b/contact.html
@@ -207,28 +207,31 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.6789!2d83.447447!3d27.697475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjfCsDQxJzUxLjAiTiA4M8KwMjYnNTUuMCJF!5e0!3m2!1sen!2snp!4v1678901234567!5m2!1sen!2snp" class="w-full h-[350px] sm:h-[400px] border-0 rounded-xl shadow-md" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-<form action="https://formspree.io/f/mvgrwyve" method="POST" class="bg-white p-6 sm:p-8 rounded-xl shadow-md">
+<form id="contact-form" class="bg-white p-6 sm:p-8 rounded-xl shadow-md">
     <div class="form-group mb-5">
-        <label for="name" class="block mb-2 font-bold text-gray-700" data-key="formNameLabel">Your Name</label>
-        <input type="text" id="name" name="name" data-key-placeholder="formNamePlaceholder" placeholder="Enter your name" required class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-[#2A6BBF] focus:ring-2 focus:ring-[#2A6BBF]/20 transition-all duration-200">
+        <label for="name" class="block mb-2 font-bold text-gray-700">Your Name</label>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required class="w-full p-3 border border-gray-300 rounded-lg">
     </div>
 
     <div class="form-group mb-5">
-        <label for="email" class="block mb-2 font-bold text-gray-700" data-key="formEmailLabel">Your Email</label>
-        <input type="email" id="email" name="email" data-key-placeholder="formEmailPlaceholder" placeholder="Enter your email" required class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-[#2A6BBF] focus:ring-2 focus:ring-[#2A6BBF]/20 transition-all duration-200">
+        <label for="email" class="block mb-2 font-bold text-gray-700">Your Email</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required class="w-full p-3 border border-gray-300 rounded-lg">
     </div>
 
     <div class="form-group mb-5">
-        <label for="subject" class="block mb-2 font-bold text-gray-700" data-key="formSubjectLabel">Subject</label>
-        <input type="text" id="subject" name="subject" data-key-placeholder="formSubjectPlaceholder" placeholder="Enter subject" required class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-[#2A6BBF] focus:ring-2 focus:ring-[#2A6BBF]/20 transition-all duration-200">
+        <label for="subject" class="block mb-2 font-bold text-gray-700">Subject</label>
+        <input type="text" id="subject" name="subject" placeholder="Enter subject" required class="w-full p-3 border border-gray-300 rounded-lg">
     </div>
 
     <div class="form-group mb-6">
-        <label for="message" class="block mb-2 font-bold text-gray-700" data-key="formMessageLabel">Message</label>
-        <textarea id="message" name="message" data-key-placeholder="formMessagePlaceholder" placeholder="Write your message here..." required class="w-full p-3 border border-gray-300 rounded-lg resize-y min-h-[140px] focus:outline-none focus:border-[#2A6BBF] focus:ring-2 focus:ring-[#2A6BBF]/20 transition-all duration-200"></textarea>
+        <label for="message" class="block mb-2 font-bold text-gray-700">Message</label>
+        <textarea id="message" name="message" placeholder="Write your message here..." required class="w-full p-3 border border-gray-300 rounded-lg"></textarea>
     </div>
 
-    <button type="submit" class="bg-[#2A6BBF] text-white py-3 px-6 rounded-lg text-base cursor-pointer hover:bg-[#1f56a1] transition-all duration-300 ease-in-out transform hover:-translate-y-1 active:translate-y-0 shadow-md hover:shadow-lg" data-key="formSubmitButton">Send Message</button>
+    <button type="submit" class="bg-[#2A6BBF] text-white py-3 px-6 rounded-lg cursor-pointer hover:bg-[#1f56a1]">Send Message</button>
+
+    <!-- Area to show status messages -->
+    <p id="form-status" style="margin-top:1rem; font-weight:bold;"></p>
 </form>
     </main>
 
@@ -371,5 +374,43 @@
             }
         });
     </script>
+    <script>
+document.getElementById('contact-form').addEventListener('submit', function(event) {
+    event.preventDefault(); // Prevent default form submission
+
+    const form = event.target;
+    const status = document.getElementById('form-status');
+
+    const data = {
+        name: form.name.value,
+        email: form.email.value,
+        subject: form.subject.value,
+        message: form.message.value
+    };
+
+    fetch('https://formspree.io/f/mvgrwyve', {
+        method: 'POST',
+        headers: {
+            'Accept': 'application/json'
+        },
+        body: JSON.stringify(data)
+    }).then(response => {
+        if (response.ok) {
+            // Success: redirect or show success message
+            window.location.href = 'https://seikaeducation.com/thankyou.html';
+        } else {
+            return response.json().then(data => {
+                if (data.errors) {
+                    status.textContent = data.errors.map(error => error.message).join(", ");
+                } else {
+                    status.textContent = 'Oops! There was a problem submitting your form';
+                }
+            });
+        }
+    }).catch(error => {
+        status.textContent = 'Oops! There was a problem submitting your form';
+    });
+});
+</script>
 </body>
 </html>
