--- a/thankyou.html
+++ b/thankyou.html
@@ -1,79 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Thank You</title>
-    <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            font-family: Arial, sans-serif;
-        }
-
-        .content {
-            flex: 1;
-            text-align: center;
-            padding: 50px;
-        }
-
-        .thankyou {
-            font-size: 1.5em;
-            color: #2A6BBF;
-        }
-
-        footer {
-            background: #222;
-            color: #ccc;
-            padding: 15px 30px;
-            text-align: center;
-            font-size: 0.9rem;
-        }
-
-        .social-links a {
-            color: #ccc;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-
-        .social-links a:hover {
-            color: white;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Thank You | Seika Education Consultancy</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <meta http-equiv="refresh" content="8;url=/home" />
 </head>
-<body>
 
-    <!-- ヘッダー読み込み -->
-    <div id="header"></div>
+<body class="flex flex-col items-center justify-center min-h-screen bg-gradient-to-br from-blue-100 to-blue-300 text-center p-6 relative">
 
-    <script>
-    fetch('header.html')
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById('header').innerHTML = data;
-      });
-    </script>
+  <!-- Background faint image -->
+  <div class="absolute inset-0 opacity-10 bg-cover bg-center" style="background-image: url('/Seika-education/img/world-map-bg.png');"></div>
 
-    <!-- メイン表示 -->
-    <div class="content">
-        <div class="thankyou">
-            <h1>Thank you!</h1>
-            <p>Your message has been sent. We will contact you soon.</p>
-        </div>
+  <div class="relative max-w-lg bg-white bg-opacity-90 p-10 rounded-xl shadow-2xl animate-fade-in-up">
+    <!-- Animated Check Icon -->
+    <div class="flex justify-center mb-6">
+      <svg class="w-20 h-20 text-green-500 animate-bounce" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
+      </svg>
     </div>
 
-    <!-- フッター -->
-    <footer>
-        <p data-key="footerText">© 2025 Seika Education Consultancy. All rights reserved.</p>
-        <div class="social-links">
-            <a href="https://www.facebook.com/SeikaEducation" target="_blank" aria-label="Visit Seika Education Consultancy on Facebook">Facebook</a> |
-            <a href="https://tiktok.com/seikaedu" target="_blank" aria-label="Visit Seika Education Consultancy on TikTok">TikTok</a> |
-            <a href="https://instagram.com/seikaedu" target="_blank" aria-label="Visit Seika Education Consultancy on Instagram">Instagram</a>
-        </div>
-    </footer>
+    <h1 class="text-4xl font-bold text-[#2A6BBF] mb-4">Thank You!</h1>
+    <p class="text-lg mb-6">Your message has been successfully sent.<br>We will contact you shortly.</p>
+
+    <a href="/home" class="inline-block bg-[#2A6BBF] text-white px-6 py-3 rounded-lg hover:bg-[#1f56a1] transition">Back to Home</a>
+
+    <div class="mt-8">
+      <p class="mb-3 font-semibold">Follow us on:</p>
+      <div class="flex justify-center space-x-5 text-xl">
+        <a href="https://facebook.com/SeikaEducation" target="_blank" aria-label="Facebook" class="hover:text-blue-600">Facebook</a>
+        <a href="https://instagram.com/seikaedu" target="_blank" aria-label="Instagram" class="hover:text-pink-500">Instagram</a>
+        <a href="https://tiktok.com/seikaedu" target="_blank" aria-label="TikTok" class="hover:text-black">TikTok</a>
+      </div>
+    </div>
+
+    <p class="mt-6 text-sm text-gray-500">You will be redirected in <span id="countdown">8</span> seconds...</p>
+  </div>
+
+  <script>
+    // Simple countdown
+    let countdown = 8;
+    const countdownElement = document.getElementById('countdown');
+    setInterval(() => {
+      countdown--;
+      if (countdownElement && countdown > 0) {
+        countdownElement.textContent = countdown;
+      }
+    }, 1000);
+  </script>
+
+  <!-- Simple fade-in animation -->
+  <style>
+    @keyframes fade-in-up {
+      0% {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+    .animate-fade-in-up {
+      animation: fade-in-up 0.8s ease-out;
+    }
+  </style>
 
 </body>
 </html>
