--- a/thankyou.html
+++ b/thankyou.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Thank You | Seika Education Consultancy</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <meta http-equiv="refresh" content="8;url=/home" />
+  <meta http-equiv="refresh" content="8;url=/index.html" />
 </head>
 
 <body class="flex flex-col items-center justify-center min-h-screen bg-gradient-to-br from-blue-100 to-blue-300 text-center p-6 relative">
@@ -24,7 +24,7 @@
     <h1 class="text-4xl font-bold text-[#2A6BBF] mb-4">Thank You!</h1>
     <p class="text-lg mb-6">Your message has been successfully sent.<br>We will contact you shortly.</p>
 
-    <a href="/home" class="inline-block bg-[#2A6BBF] text-white px-6 py-3 rounded-lg hover:bg-[#1f56a1] transition">Back to Home</a>
+    <a href="/index.html" class="inline-block bg-[#2A6BBF] text-white px-6 py-3 rounded-lg hover:bg-[#1f56a1] transition">Back to Home</a>
 
     <div class="mt-8">
       <p class="mb-3 font-semibold">Follow us on:</p>
