--- a/thankyou.html
+++ b/thankyou.html
@@ -17,7 +17,7 @@
 
     <!-- ロゴをチェックマークの上に表示 -->
     <div class="flex flex-col items-center mb-6 space-y-4">
-      <img src="/Seika-education/imgages/Logo-Seika.png" alt="Seika Education Consultancy Logo" class="w-24 h-auto" />
+      <img src="./images/Logo-Seika.png" alt="Seika Education Consultancy Logo" class="w-24 h-auto" />
       <svg class="w-20 h-20 text-green-500 animate-bounce" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
       </svg>
