--- a/thankyou.html
+++ b/thankyou.html
@@ -28,14 +28,19 @@
 
     <a href="/index.html" class="inline-block bg-[#2A6BBF] text-white px-6 py-3 rounded-lg hover:bg-[#1f56a1] transition">Back to Home</a>
 
-    <div class="mt-8">
-      <p class="mb-3 font-semibold">Follow us on:</p>
-      <div class="flex justify-center space-x-5 text-xl">
-        <a href="https://facebook.com/SeikaEducation" target="_blank" aria-label="Facebook" class="hover:text-blue-600">Facebook</a>
-        <a href="https://instagram.com/seikaedu" target="_blank" aria-label="Instagram" class="hover:text-pink-500">Instagram</a>
-        <a href="https://tiktok.com/seikaedu" target="_blank" aria-label="TikTok" class="hover:text-black">TikTok</a>
-      </div>
-    </div>
+<!-- 下に区切り線 -->
+<hr class="my-6 border-t-2 border-[#2A6BBF] w-full" />
+
+<div class="mt-8">
+  <p class="mb-3 font-semibold">Follow us on:</p>
+  <div class="flex justify-center items-center space-x-3 text-xl">
+    <a href="https://facebook.com/SeikaEducation" target="_blank" aria-label="Facebook" class="hover:text-blue-600">Facebook</a>
+    <span>|</span>
+    <a href="https://instagram.com/seikaedu" target="_blank" aria-label="Instagram" class="hover:text-pink-500">Instagram</a>
+    <span>|</span>
+    <a href="https://tiktok.com/seikaedu" target="_blank" aria-label="TikTok" class="hover:text-black">TikTok</a>
+  </div>
+</div>
 
     <p class="mt-6 text-sm text-gray-500">You will be redirected in <span id="countdown">8</span> seconds...</p>
   </div>
