--- a/contact.html
+++ b/contact.html
@@ -217,7 +217,10 @@
         <label for="email" class="block mb-2 font-bold text-gray-700">Your Email</label>
         <input type="email" id="email" name="email" placeholder="Enter your email" required class="w-full p-3 border border-gray-300 rounded-lg">
     </div>
-
+    <div class="form-group mb-5">
+        <label for="phone" class="block mb-2 font-bold text-gray-700">Your Phone Number</label>
+        <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required class="w-full p-3 border border-gray-300 rounded-lg">
+    </div>
     <div class="form-group mb-5">
         <label for="subject" class="block mb-2 font-bold text-gray-700">Subject</label>
         <input type="text" id="subject" name="subject" placeholder="Enter subject" required class="w-full p-3 border border-gray-300 rounded-lg">
