--- a/contact.html
+++ b/contact.html
@@ -223,7 +223,7 @@
   <!-- Phone -->
   <div class="form-group mb-5">
     <label for="phone" class="block mb-2 font-bold text-gray-700">Your Phone Number</label>
-    <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required pattern="[0-9]{7,15}" class="w-full p-3 border border-gray-300 rounded-lg">
+    <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required pattern="^[0-9]{7,15}$" class="w-full p-3 border border-gray-300 rounded-lg">
   </div>
 
   <!-- Subject -->
