--- a/contact.html
+++ b/contact.html
@@ -269,6 +269,8 @@
                 formNamePlaceholder: "Enter your name",
                 formEmailLabel: "Your Email",
                 formEmailPlaceholder: "Enter your email",
+                formPhoneLabel: "Your Phone Number",
+                formPhonePlaceholder: "Enter your phone number",
                 formSubjectLabel: "Subject",
                 formSubjectPlaceholder: "Enter subject",
                 formMessageLabel: "Message",
@@ -289,6 +291,8 @@
                 formNamePlaceholder: "お名前を入力してください",
                 formEmailLabel: "メールアドレス",
                 formEmailPlaceholder: "メールアドレスを入力してください",
+                formPhoneLabel: "Your Phone Number",
+                formPhonePlaceholder: "Enter your phone number",
                 formSubjectLabel: "件名",
                 formSubjectPlaceholder: "件名を入力してください",
                 formMessageLabel: "メッセージ",
