--- a/header.html
+++ b/header.html
@@ -152,12 +152,12 @@
   </ul>
 </nav>
 
-    //<div class="language-switch" aria-live="polite">//
-      //<button id="enBtn" type="button">English</button>//
-      //<span>|</span>//
-      //<button id="jpBtn" type="button">日本語</button>//
-    //</div>//
-    //
+    <div class="language-switch" aria-live="polite">
+      <button id="enBtn" type="button">English</button>
+      <span>|</span>
+      <button id="jpBtn" type="button">日本語</button>
+    </div>//
+    
   </header>
 
   <script>
