--- a/header.html
+++ b/header.html
@@ -156,7 +156,7 @@
       <button id="enBtn" type="button">English</button>
       <span>|</span>
       <button id="jpBtn" type="button">日本語</button>
-    </div>//
+    </div>
     
   </header>
 
