--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="keywords" content="study in Japan, education consultancy, visa support, Japanese language training" />
   <meta name="author" content="Seika Education Consultancy" />
   <title>Seika Education Consultancy</title>
-
+  <link rel="canonical" href="https://seikaeducation.com/">
+  
   <link rel="preload" as="image" href="./images/banner-2.webp">
   <link rel="preload" as="image" href="./images/banner-5.webp">
   <link rel="preload" as="image" href="./images/banner-1.webp">
