--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <meta name="keywords" content="study in Japan, education consultancy, visa support, Japanese language training" />
   <meta name="author" content="Seika Education Consultancy" />
   <title>Seika Education Consultancy</title>
+   <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "SeikaEducation",
+    "url": "https://seikaeducation.com",
+    "logo": "https://seikaeducation.com/images/logo.png"
+  }
+  </script>
   <link rel="canonical" href="https://seikaeducation.com/">
   
   <link rel="preload" as="image" href="./images/banner-2.webp">
