--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     "@type": "Organization",
     "name": "SeikaEducation",
     "url": "https://seikaeducation.com",
-    "logo": "https://seikaeducation.com/images/logo.png"
+    "logo": "./images/Logo-Seika.png"
   }
   </script>
   <link rel="canonical" href="https://seikaeducation.com/">
