--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
   <meta name="keywords" content="study in Japan, education consultancy, visa support, Japanese language training" />
   <meta name="author" content="Seika Education Consultancy" />
   <title>Seika Education Consultancy</title>
-   <script type="application/ld+json">
+  <!-- Structured Data for Organization Logo -->
+  <script type="application/ld+json">
   {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "SeikaEducation",
-    "url": "https://seikaeducation.com",
-    "logo": "https://seikaeducation.com/images/Logo-Seika.png"
-  }
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Seika Education Consultancy Pvt. Ltd",
+  "url": "https://seikaeducation.com/",
+  "logo": "https://seikaeducation.com/images/Logo-Seika.png",
+  "sameAs": [
+      "https://www.facebook.com/SeikaEducation",
+      "https://www.instagram.com/seika.education"
+    ]  
+}
   </script>
   <link rel="canonical" href="https://seikaeducation.com/">
-  
   <link rel="preload" as="image" href="./images/banner-2.webp">
   <link rel="preload" as="image" href="./images/banner-5.webp">
   <link rel="preload" as="image" href="./images/banner-1.webp">
-
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
   <style>
     /* Global Box Sizing for consistent layout */
     *, *::before, *::after {
